Start layouts and includes

--- a/_posts/news/2018-02-23-new-news.md
+++ b/_posts/news/2018-02-23-new-news.md
@@ -1,14 +1,9 @@
 ---
-layout: blog
+layout: post
 title: new news
 date: 2018-02-23T08:05:46.419Z
 thumbnail: /images/uploads/the killie pie song.jpg
-rating: '1'
 ---
 OK, here goes ...
-
-
-
-
 
 Hello World
