--- a/_posts/news/2018-02-23-new-news.md
+++ b/_posts/news/2018-02-23-new-news.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: news-article
 title: new news
 date: 2018-02-23T08:05:46.419Z
 thumbnail: /images/uploads/the killie pie song.jpg
